--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Articles 
       - href: articles/passwordGenerator.qmd
         text: Password Generator
+      - href: posts/index.qmd
+        text: Blogs
 
   sidebar:
     - id: articles
